--- a/Gabriel_Campos_DATA624_HW1.Rmd
+++ b/Gabriel_Campos_DATA624_HW1.Rmd
@@ -12,7 +12,7 @@ output:
 urlcolor: blue
 ---
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 library('ggplot2')
 library('forecast')
 library('quantmod')
@@ -76,14 +76,9 @@ gas_max <- which.max(gas)
 # e.g. y <- ts(z, start=2003, frequency=12)
 
 autoplot(ts(gas, frequency = gas_freq)) +
-  ggtitle(paste("gas Time Series Plot | Frequency =", gas_freq,)) 
+  ggtitle(paste("gas Time Series Plot | Frequency =", gas_freq," |Gas = ", gas_max)) 
 ```
-    
 
-
-
-    
-    
 2.  Download the file `tute1.csv` from the book website, open it in Excel (or some other spreadsheet application), and review its contents. You should find four columns of information. Columns B through D each        contain a quarterly series, labelled Sales, AdBudget and GDP. Sales contains the quarterly sales for a small company over the period 1981-2005. AdBudget is the advertising budget and GDP is the gross domestic     product. All series have been adjusted for inflation.
 a.  You can read the data into R with the following script:
 
@@ -121,6 +116,43 @@ Check what happens when you don’t include facets=TRUE.
 *ANSWER*
 
 ```{r}
-autoplot(mytimeseries)
+autoplot(mytimeseries, facets=FALSE)
 ```
+
+3. Download some monthly Australian retail data from the book website. These represent retail sales in various categories for different Australian states, and are stored in a MS-Excel file.
+
+a. You can read the data into R with the following script:
+
+```{r}
+
+#retaildata <- readxl::read_excel("retail.xlsx", skip=1)
+
+```
+
+The second argument (skip=1) is required because the Excel sheet has two header rows.
+
+b. Select one of the time series as follows (but replace the column name with your own chosen column):
+
+```{r}
+
+```
+
+Explore your chosen retail time series using the following functions:
+
+`autoplot()`, `ggseasonplot()`, `ggsubseriesplot()`, `gglagplot()`, `ggAcf()`
+
+Can you spot any seasonality, cyclicity and trend? What do you learn about the series?
+
+Create time plots of the following time series: `bicoal`, `chicken`, `dole`, `usdeaths`, `lynx`, `goog`, `writing`, `fancy`, `a10`, `h02`.
+
+
+
+
+
+
+
+
+
+
+
 
